docs: Adapting for UK (from UA)

--- a/docs/src/index.tmpl
+++ b/docs/src/index.tmpl
@@ -103,7 +103,7 @@ function setup_page(){
 <a href="ru/">Russian</a>
 <a href="sv/">Svensk</a>
 <!-- <a href="ta/">Tamil</a> -->
-<a href="ua/">Ukranian</a>
+<a href="uk/">Ukranian</a>
 <a href="zh_CN/">中文</a>
 </p>
 @ENDTRANSLATIONS@
