gladevcp -add a gladevcp builtin panel document
Needs to be fleshed out more, but is a start.

--- a/docs/src/index.tmpl
+++ b/docs/src/index.tmpl
@@ -320,6 +320,7 @@ function setup_page(){
 		<li><a href="gui/pyvcp.html">Python Virtual Control Panel (PyVCP)</a></li>
 		<li><a href="gui/pyvcp-examples.html">PyVCP Examples</a></li>
 		<li><a href="gui/gladevcp.html">Glade Virtual Control Panel (GladeVCP)</a></li>
+		<li><a href="gui/gladevcp-panels.html">GladeVCP Panels</a></li>
 		<li><a href="gui/gladevcp-libraries.html">GladeVCP Libraries</a></li>
 		<li><a href="gui/qtvcp.html">QtVCP</a></li>
 		<li><a href="gui/qtvcp-vcp-panels.html">QtVCP -VCP Panels</a></li>
